<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1DDDD"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:context=".MainActivity">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="316dp"
            android:background="#FFFBFB"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/textinput_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_white"
            android:hint="@string/currAddress"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_address" />

        <EditText
            android:id="@+id/textinput_hometown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_white"
            android:hint="@string/hometown"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_hometown" />

        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_hometown" />

        <TextView
            android:id="@+id/text_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_address" />

        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/text_hometown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hometown"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_bd" />

        <EditText
            android:id="@+id/textinput_bd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_white"
            android:hint="@string/birthday"
            android:inputType="date"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_birthday" />

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_birthday"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_email" />

        <EditText
            android:id="@+id/textinput_cccd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_white"
            android:hint="@string/cccd"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_cccd" />

        <EditText
            android:id="@+id/textinput_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_white"
            android:hint="@string/phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_phone" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_phone" />

        <EditText
            android:id="@+id/textinput_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_email" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_cccd" />

        <TextView
            android:id="@+id/text_cccd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cccd"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_name" />

        <TextView
            android:id="@+id/text_mssv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mssv"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textinput_mssv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_white"
            android:ems="10"
            android:hint="@string/mssv"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_mssv" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_mssv" />

        <EditText
            android:id="@+id/textinput_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_white"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name" />


        <ImageButton
            android:id="@+id/btn_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_birthday"
            app:srcCompat="@drawable/ic_baseline_edit_calendar_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_major">

            <RadioButton
                android:id="@+id/btn_it1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_major" />

            <RadioButton
                android:id="@+id/btn_it2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it2" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/cb_java"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/java"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_language" />

        <CheckBox
            android:id="@+id/cb_cplusplus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cplus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_java" />

        <CheckBox
            android:id="@+id/cb_python"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/python"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_cplusplus" />

        <CheckBox
            android:id="@+id/cb_php"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/php"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_python" />

        <CheckBox
            android:id="@+id/cb_csharp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/csharp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_php" />

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/agree"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_csharp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_agree" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

